add: offers sections

--- a/index.html
+++ b/index.html
@@ -84,45 +84,69 @@
 
       <section class="hero-banner">
         <h2>Uma nova experiência!</h2>
-        <h1 class="title">KING<span class="text-highlight">BURGUER</span></h1>
+        <h1 class="title">KING<span class="text-highlight title">BURGUER</span></h1>
         <p>Para quem tem um <span class="background-highlight">Apetite de REI!</span></p>
         <button class="cta-btn">Compre agora</button>
     </section>
-
     <section class="info row">
-        <div class="content-info row">
-            <div>
-                <img src="./assets/burger.svg" alt="Burguer" class="info-icons">
-            </div>
-            <div>
-                <h3 class="title">Artesanal</h3>
-                <p>Nossas receitas são feitas com todo cuidado.</p>
-            </div>
-        </div>
+      <div class="content-info row">
+          <div>
+              <img src="./assets/burger.svg" alt="Burguer" class="info-icons">
+          </div>
+          <div>
+              <h3 class="title">Artesanal</h3>
+              <p>Nossas receitas são feitas com todo cuidado.</p>
+          </div>
+      </div>
 
-        <div class="content-info row">
-            <div>
-                <img src="./assets/delivery.svg" alt="Burguer" class="info-icons">
-            </div>
-            <div>
-                <h3 class="title">Atendimento</h3>
-                <p>Totalmente personalizado.</p>
-            </div>
-        </div>
+      <div class="content-info row">
+          <div>
+              <img src="./assets/delivery.svg" alt="Burguer" class="info-icons">
+          </div>
+          <div>
+              <h3 class="title">Atendimento</h3>
+              <p>Totalmente personalizado.</p>
+          </div>
+      </div>
 
-        <div class="content-info row">
-            <div>
-                <img src="./assets/headset.svg" alt="Burguer" class="info-icons">
-            </div>
-            <div>
-                <h3 class="title">Delivery speed</h3>
-                <p>Entregamos em menos de 45 minutos.</p>
-            </div>
-        </div>
-    </section>
+      <div class="content-info row">
+          <div>
+              <img src="./assets/headset.svg" alt="Burguer" class="info-icons">
+          </div>
+          <div>
+              <h3 class="title">Delivery speed</h3>
+              <p>Entregamos em menos de 45 minutos.</p>
+          </div>
+      </div>
+  </section>
+   
     </header>
-    
-
+      <main>
+        <section class="specials-offers">
+            <h2 class="title">Ofertas Especiais</h2>
+            <p>Aproveite todas as nossas ofertas, fiquem de olhos abertos, porque sempre estamos mudando o nosso cardapio.</p>
+            <div class="offers">
+                <div class="offer-content first-offer">
+                    <div class="offer-info">
+                      <h2 class="title">Burger imperial+batata</h2>
+                      <span>250kg</span>
+                    </div>
+                    <div class="offer-alert">
+                      <p>Apenas</p>
+                      <h3>Hoje</h3>
+                    </div>
+                </div>
+                <div class="second-offer">
+                    <h2 class="title">Batata</h2>
+                    <span>150kg</span>
+                </div>
+                <div class="third-offer">
+                  <h2 class="title">Sorvete</h2>
+                  <span>50kg</span>
+                </div>
+            </div>
+        </section>
+      </main>
     <script src="javascript/main.js"></script>
   </body>
 </html>
