add: title class

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <span>150kg</span>
                 </div>
                 <div class="third-offer">
-                  <h2 class="">Sorvete</h2>
+                  <h2 class="title">Sorvete</h2>
                   <span>50kg</span>
                 </div>
             </div>
@@ -170,8 +170,8 @@
         </section>  
 
         <section class="menu row">
-            <div class="right-cta row">
-               <div class="right-cta-menu-info">
+            <div class="left-cta row">
+               <div class="left-cta-menu-info">
                 <h1 class="title">
                   Escolha o seu combo imperial, <span class="background-highlight title">peça agora!</span>
                 </h1>
