add: comment section

--- a/index.html
+++ b/index.html
@@ -188,6 +188,24 @@
                 <ul id="menuList"></ul>
             </div>
         </section>
+
+        <section class="card row">
+          <div class="card-image">
+              <img src="./assets/card-woman-eating.png" alt="">
+          </div>
+          <div class="card-info">
+              <h1 class="title">Atendimento  <span class="background-highlight title">personalizado</span></h1>
+              <p>Todos os nossos clientes são tratados como rei e rainha, com a nossa colunaria artesanal.</p>
+              <button class="cta-btn">Cardápio Imperial</button>
+          </div>
+        </section>
+
+        <section class="comments">
+            <h2 class="title">Nossa realeza</h2>
+            <p>A satisfação de nossos clientes em primeiro lugar!</p>
+            <div class="carroussel row" id="carrousel">
+            </div>
+        </section>
       </main>
      
     <script src="javascript/main.js"></script>
