add: instagram and delivery sections

--- a/index.html
+++ b/index.html
@@ -122,13 +122,14 @@
    
     </header>
       <main>
+
         <section class="specials-offers">
             <h2 class="title">Ofertas Especiais</h2>
             <p>Aproveite todas as nossas ofertas, fiquem de olhos abertos, porque sempre estamos mudando o nosso cardapio.</p>
             <div class="offers">
                 <div class="offer-content first-offer">
                     <div class="offer-info">
-                      <h2 class="title">Burger imperial+batata</h2>
+                      <h2 class="title imperial">Burger imperial+batata</h2>
                       <span>250kg</span>
                     </div>
                     <div class="offer-alert">
@@ -206,6 +207,29 @@
             <div class="carroussel row" id="carrousel">
             </div>
         </section>
+
+        <section class="instagram-posts">
+            <h2 class="title">Publicações do instagram</h2>
+            <p>Todos os nossos clientes são tratados como rei e rainha, com a nossa colunaria artesanal.</p>
+            <div class="posts row">  
+                <img src="./assets/hamburguer1.png" alt="hamburguer" class="img-post">
+                <img src="./assets/hamburguer2.png" alt="hamburguer" class="img-post">
+                <img src="./assets/hamburguer3.png" alt="hamburguer" class="img-post">
+                <img src="./assets/hamburguer4.png" alt="hamburguer" class="img-post">
+                <img src="./assets/hamburguer5.png" alt="hamburguer" class="img-post">
+                <img src="./assets/hamburguer6.png" alt="hamburguer" class="img-post">
+            </div>
+            <div class="hash-burguer">
+                <h2 class="title">• #empireburger • #empireburger • #empireburger • #empireburger • #empireburger • #empireburger • #empireburger • #empireburger • #empireburger • #empireburger • #empireburger </h2>
+            </div>
+        </section>
+
+          <section class="develvery">
+            <div class="card-phone">
+              <img src="./assets/card-phone.png" alt="">
+            </div>
+            <div class="delivery-options"></div>
+          </section>  
       </main>
      
     <script src="javascript/main.js"></script>
