fixed: carrousel posts max width

--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
       <nav>
         <div class="nav-container row">
           <div class="logo">
-            <img src="assets/logo.png" alt="" />
+            <img src="assets/logo.png" alt="" id="home"/>
           </div>
 
           <ul class="row navigation">
             <li>
-              <a href="#">Home</a>
+              <a href="#home">Home</a>
             </li>
             <li>
-              <a href="#">Promoção</a>
+              <a href="#promotion">Promoção</a>
             </li>
             <li>
-              <a href="#">Cardápio</a>
+              <a href="#menu">Cardápio</a>
             </li>
             <li>
-              <a href="#">Comentário</a>
+              <a href="#comments">Comentário</a>
             </li>
             <li>
-              <a href="#">Contato</a>
+              <a href="#contact">Contato</a>
             </li>
           </ul>
 
@@ -77,19 +77,19 @@
       <section class="mobile-menu">
         <ul class="mobile-menu-list row">
             <li>
-                <a href="">Home</a>
+                <a href="#home">Home</a>
             </li>
             <li>
-                <a href="">Promoção</a>
+                <a href="#promotion">Promoção</a>
             </li>
             <li>
-                <a href="">Cardápio</a>
+                <a href="#menu">Cardápio</a>
             </li>
             <li>
-                <a href="">Comentário</a>
+                <a href="#comments">Comentário</a>
             </li>
             <li>
-                <a href="">Contato</a>
+                <a href="#contact">Contato</a>
             </li>
             <li>
               <svg width="28" height="15" viewBox="0 0 28 15" fill="white" xmlns="http://www.w3.org/2000/svg">
@@ -165,7 +165,7 @@
     </header>
       <main>
 
-        <section class="specials-offers">
+        <section class="specials-offers" id="promotion">
             <h2 class="title">Ofertas Especiais</h2>
             <p>Aproveite todas as nossas ofertas, fiquem de olhos abertos, porque sempre estamos mudando o nosso cardapio.</p>
             <div class="offers">
@@ -212,7 +212,7 @@
 
         </section>  
 
-        <section class="menu row">
+        <section class="menu row" id="menu">
             <div class="left-cta row">
                <div class="left-cta-menu-info">
                 <h1 class="title">
@@ -243,7 +243,7 @@
           </div>
         </section>
 
-        <section class="comments">
+        <section class="comments" id="comments">
             <h2 class="title">Nossa realeza</h2>
             <p>A satisfação de nossos clientes em primeiro lugar!</p>
             <div class="carroussel row" id="carrousel">
@@ -254,6 +254,12 @@
             <h2 class="title">Publicações do instagram</h2>
             <p>Todos os nossos clientes são tratados como rei e rainha, com a nossa colunaria artesanal.</p>
             <div class="posts row">  
+                <img src="./assets/hamburguer1.png" alt="hamburguer" class="img-post">
+                <img src="./assets/hamburguer2.png" alt="hamburguer" class="img-post">
+                <img src="./assets/hamburguer3.png" alt="hamburguer" class="img-post">
+                <img src="./assets/hamburguer4.png" alt="hamburguer" class="img-post">
+                <img src="./assets/hamburguer5.png" alt="hamburguer" class="img-post">
+                <img src="./assets/hamburguer6.png" alt="hamburguer" class="img-post">
                 <img src="./assets/hamburguer1.png" alt="hamburguer" class="img-post">
                 <img src="./assets/hamburguer2.png" alt="hamburguer" class="img-post">
                 <img src="./assets/hamburguer3.png" alt="hamburguer" class="img-post">
@@ -316,7 +322,7 @@
             </div>
           </section>  
 
-          <section class="take-your-order row">
+          <section class="take-your-order row" id="contact">
               <div class="row teste">
                 <div class="phone-box row">
                   <img src="./assets/phone.svg" alt="Icone do celular" class="phone-icon">
