--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 <div class="icon-size row">
                     <img src="./assets/whatsapp.svg" alt="Whatsapp">
                 </div>
-                <div class="delivery-text-content">
+                <div class="delivery-text-content row">
                     <h3 class="title">Whatsapp</h3>
                     <p>Vamos direto ao ponto, sem perder tempo!</p>
                 </div>
@@ -294,7 +294,7 @@
                 <div class="icon-size row">
                     <img src="./assets/deliverysecondsize.svg" alt="Entrega">
                 </div>
-                <div class="delivery-text-content">
+                <div class="delivery-text-content row">
                     <h3 class="title">Entrega</h3>
                     <p>Entregamos menos de 45 minutos na porta da sua casa!</p>
                 </div>
@@ -304,7 +304,7 @@
                 <div class="icon-size row">
                     <img src="./assets/ice-cream.svg" alt="Sobremesa">
                 </div>
-                <div class="delivery-text-content">
+                <div class="delivery-text-content row">
                     <h3 class="title">Sobremesa</h3>
                     <p>Pedidos assima de 100 reais, ganham brindes.</p>
                 </div>
@@ -312,9 +312,9 @@
 
               <div class="row delivery-box">
                 <div class="icon-size row">
-                    <img src="./assets/ifoodbrown.svg" alt="IFood logo" class="ifood-icon">
+                    <img src="./assets/ifood.svg" alt="IFood logo" class="ifood-icon">
                 </div>
-                <div class="delivery-text-content">
+                <div class="delivery-text-content row">
                     <h3 class="title">Ifood</h3>
                     <p>Nossa loja é Top 1 da região!</p>
                 </div>
