Update timer info

--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                   </div>
                   <div class="timer-info">
                     <h3 class="title">Horário de funcionamento</h3>
-                  <p>Segunda-feira a sexta-feira: 17h00 - 23h00</p>
-                  <p>Sabado a Domíngo: 18h30 - 23h00</p>
+                 <p>Segunda-feira a sexta-feira: 17:00 - 23:00</p>
+                  <p>Sabado a Domíngo: 18:00 - 23:00</p>
                   </div>
                 </div>
 
